Add json-server, server.js, Procfile

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"@testing-library/user-event": "^12.8.3",
 		"axios": "^0.24.0",
 		"classnames": "^2.3.1",
+		"json-server": "^0.17.0",
 		"node-sass": "^6.0.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
@@ -20,7 +21,8 @@
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
-		"fake-json": "json-server ./src/assets/db.json --watch --port 3001"
+		"server": "node server.js",
+		"json-server": "json-server ./src/assets/db.json --watch --port 3001"
 	},
 	"eslintConfig": {
 		"extends": [
